falta n:m arrumar o direcionamento depois do cadastro

--- a/web/index.html
+++ b/web/index.html
@@ -7,11 +7,12 @@ and open the template in the editor.
 <html>
     <head>
         <link rel="stylesheet" href="dist/css/sb-admin-2.css">
-        <title>TODO supply a title</title>
+        <title>Menu Principal</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <img src="paginas/fenix.png" align="bottom" height="15%" width="15%" alt="Mandala Saraswati" >
         <h2>CADASTRAR</h2>
         <ul>
             <li>
