falta usuario_recebe_modulo_sistema falta ajeitar as datas

--- a/web/index.html
+++ b/web/index.html
@@ -47,7 +47,7 @@ and open the template in the editor.
 
 
             <li>
-                <a href="paginas/obraHasAutorCadastro.jsp"> Obra Has Autor </a>
+                <a href="paginas/autorPublicaObraCadastro.jsp"> Autor Publica Obra </a>
             </li>
             <li>
                 <a href="paginas/tipoUsuarioHasModuloSistemaCadastro.jsp"> Tipo de Usuário Has Modulo Sistema </a>
@@ -96,7 +96,7 @@ and open the template in the editor.
 
 
             <li>
-                <a href="paginas/obraHasAutorListaScriptlet.jsp"> Obra Has Autor </a>
+                <a href="paginas/autorPublicaObraListaScriptlet.jsp"> Autor Publica Obra </a>
             </li>
             <li>
                 <a href="paginas/tipoUsuarioHasModuloSistemaListaScriptlet.jsp"> Tipo de Usuário Has Modulo Sistema </a>
